48
================

28/02/24 Add "Dead On Arrival" entry type and behaviour #1448
26/02/24 Ability to copy media to other records #1258
26/02/24 Allow doc repo files to be attached when emailing media #1434
25/02/24 Fix bug processing animal forms with no breed #1443
24/02/24 Escape animal names in option/value attribute of online forms
23/02/24 Include basic logo as part of default online form template #1342
21/02/24 Display a thumbnail for adoptable animals in online forms #1420
21/02/24 Set crossbreed when creating animals from online forms #1443
16/02/24 Verify signature data-uri is valid and contains at least a line #1438
16/02/24 Autoprocess: attach animal/create person no longer adds media to animal #1437
16/02/24 Option to attach form to animals without media #1437
16/02/24 Create->Animal (non-shelter with owner) form option #1131
12/02/24 Waiting list: option to set default removal in weeks #1416
12/02/24 Show a thumbnail in the animal chooser dialog
10/02/24 Fix clone_from_template overriding auto not for adoption option
09/02/24 Support for backup S3 provider #1423
08/02/24 "remember me" token with 2FA causing redirect loop #1433
08/02/24 Fix clone_from_template removing holds
07/02/24 Fix clone_from_template being broken on non-postgres databases
05/02/24 Add unified check-a-chip dialog with read-through cache #1430
02/02/24 Add coordinator person additional field type (Saggi Neuemann) #1428
02/02/24 Animal templates: Do not copy nonshelter in additionalflags
02/02/24 DocumentImgThumbLink/Src using web instead of doc preferred
02/02/24 Show a different message on login for IP failure
01/02/24 Refactor chip checking to backend service, support petaddress.com.au
31/01/24 Option to hide microchip supplier #1427
31/01/24 Move chip prefix database out of code to a shared file #1427
31/01/24 Use <<PersonDocumentImg*>> tokens to avoid collisions #1426
30/01/24 SavourLife/PetRescue: fix bug with null additional fields